# dscc-tool

./: .gitignore  .python-version  Makefile  README.md  package_locally.sh  pyproject.toml
dscc_packaging/: Makefile  README.md  autogen_tests.py  autogen_tests_1130.py  cli.py  generator.py  mitre_loader.py  model_utils.py  models.py  notebook_io.py  preset_engine.py  shared_utils.py  structure.py  utils.py  validate.py
dscc_packaging/presets/: base_preset.py  detection_preset.py
dscc_packaging/template_app/base/detections/: template_detection.py
dscc_packaging/template_app/metadata/: app_meta.yaml
dscc_tester/: cli.py  generator.py
dscc_tool/: __init__.py  cli.py  logger.py  notebook.py
dscc_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
